@@ -43,6 +43,7 @@
  + New atlas format: Maplorer
  + New map source: Yahoo Taiwan
  + New map sources: Aero Charts VFR/IFR/IFR-H (USA only from runwayfinder.com) 
+ + New atlas format: OruxMaps Sqlite
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
